2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	Partial introduction of real plugin interface.

	* Makefile.am (modinclude_HEADERS): Added threads-plugin.h.
	(EXTRA_DIST): Added threads-plugin.c.

	* threads-plugin.h, threads-plugin.c: New files.

	* threads.h: #include "libguile/threads-plugin.h".

	* threads.c: #include "libguile/threads-plugin.c".

	* pthread-threads.c: Temporarily remove debugging functions.

	* threads.c, threads.h (scm_yield): Added back.

2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* threads.c (really_launch): Detach before unlocking
	thread_admin_mutex in order not to risk being joined.
	(scm_i_thread_put_to_sleep, scm_i_thread_wake_up): Keep
	thread_admin_mutex locked during GC.

	* pthread-threads.c, pthread-threads.h: Improvements to debugging
	functions.

2002-12-16  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* pthread-threads.c, pthread-threads.h (SCM_DEBUG_THREADS): Added
	support for debugging mutex operations.

	* threads.c (scm_thread): Removed filed joining_threads.
	(thread_print): Print thread number as well as address of thread
	structure.
	(scm_join_thread): Bugfix.
	(scm_lock_mutex, scm_try_mutex, scm_unlock_mutex,
	scm_timed_wait_condition_variable, scm_signal_condition_variable,
	scm_broadcast_condition_variable): Use the low-level API.
	(scm_all_threads): Return copy of thread list (to prevent
	unintended destruction).
	(scm_threads_prehistory): Initialize heap_mutex of fake thread.

	* pthread-threads.c, pthread-threads.h, threads.c: Fixes to
	pthread "native" recursive mutex support.

2002-12-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* __scm.h (SCM_DEFER_INTS, SCM_ALLOW_INTS): New definitions.
	Simply lock a thread C API recursive mutex.
	(SCM_NONREC_CRITICAL_SECTION_START,
	SCM_NONREC_CRITICAL_SECTION_END, SCM_REC_CRITICAL_SECTION_START,
	SCM_REC_CRITICAL_SECTION_END): Removed.

	* eval.c: Replaced SOURCE_SECTION_START / SOURCE_SECTION_END with