@@ -1,3 +1,8 @@
+2002-12-19  Mikael Djurfeldt  <mdj@kvast.blakulla.net>
+
+	* eval.c (call_subr2o_1, call_lsubr2_2): New functions.
+	(scm_trampoline_1, scm_trampoline_2): Use them.
+
 2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>
 
 	Partial introduction of real plugin interface.
